--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,10 @@
 
 <%#=javascript_include_tag "IE/jquery-1.7.1.min"%>                                         
     <%unless action_name == 'menu' || @nojquery %>
-      <%=javascript_include_tag "bootstrap-tree/jquery-1.8.2"%>
+      <%#=javascript_include_tag "bootstrap-tree/jquery-1.8.2"%>
+      <%=javascript_include_tag "Charts/Highcharts/jquery-1.11.0.min"%>
+      <%=javascript_include_tag "Charts/Highcharts/highcharts"%>
+      <%=javascript_include_tag "Charts/Highcharts/exporting"%>
     <%end%>
     <%=javascript_include_tag "IE/bootstrap"%>
     <script type="text/javascript">
