--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -92,6 +92,11 @@
 
     <div id="main" class="table" style="width: 99%; height: 83vh; border: 0px solid #000; top: 50px; position: absolute;">
       <div class="row">
+        <select id="sites" onchange="renderGraph()"> 
+          <% (@sites || []).each do |site| %>
+             <option><%= site.name.downcase %></option>
+          <% end %>
+        </select>
         <div style="text-align: center;background-color: #f5f5f5;border: 1px solid rgba(0, 0, 0, 0.05);border-radius: 4px;padding-left: 50px;" >
           <iframe id="main-display" onload="resizeIframe(this.id)" style=" height: 85vh;width: 100%; border: none; overflow: auto;" src="/home/map_main"></iframe>
         </div>
@@ -139,7 +144,8 @@
       sites = JSON.parse(JSON.stringify(sites_copy));
     }
     
-    site = sites.shift();
+    var site_selector = document.getElementById("sites");
+    site = site_selector.value;
     jQuery.ajax({
       type: "POST",
       url: "/report/render_months_of_stock_main",
