upgrading highcharts version

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -157,8 +157,7 @@
         $('#notifier').hide();
         $('#container').html()
         showGraph(data);
-
-        if (previousCircle != ''){
+        if (previousCircle != '' && previousCircle !== null){
           previousCircle.setAttribute("fill", previousColor);
           clearInterval(blinkInterval);
         }
